// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Home should render correctly 1`] = `
<Component>
  <Component
    text="Welcome home Test"
  />
</Component>
`;

exports[`Profile should render correctly 1`] = `
<Component>
  <Component
    text="Welcome home undefined"
  />
</Component>
`;
